Add a new book button which insert a filler book

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <button class="new-book-button" id="new-book-button">New Book</button>
     <div class="container" id="library-container"></div>
   </body>
 </html>
