--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   </head>
   <body>
     <button class="new-book-button" id="new-book-button">New Book</button>
+    <dialog class="book-dialog" id="book-dialog">
+      <form class="book-form" id="book-form">
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required />
+
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+
+        <label for="read">Read:</label>
+        <input type="checkbox" id="read" name="read" />
+
+        <button type="submit">Add Book</button>
+      </form>
+    </dialog>
     <div class="container" id="library-container"></div>
   </body>
 </html>
