Reposition and restyle new button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <button class="new-book-button" id="new-book-button">New Book</button>
+    <button class="new-book-button" id="new-book-button">+</button>
     <dialog class="book-dialog" id="book-dialog">
       <form class="book-form" id="book-form">
         <label for="author">Author:</label>
