Add a delete confirmation pop-up

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <button type="submit">Add Book</button>
       </form>
     </dialog>
+    <dialog class="confirm-dialog" id="confirm-dialog">
+      <p>Are you sure you want to delete this book?</p>
+      <div class="confirm-buttons">
+        <button class="confirm-button" id="confirm-delete">Delete</button>
+        <button class="cancel-button" id="cancel-delete">Cancel</button>
+      </div>
+    </dialog>
     <div class="container" id="library-container"></div>
   </body>
 </html>
