Add basic html and css for homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TOP Projects</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>My Projects</h1>
+      <div class="project-card">
+        <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/recipes">Recipes</a></h2>
+        <p>Description</p>
+      </div>
+      <div class="project-card">
+        <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
+        <p>Description</p>
+      </div>
+    </div>
+  </body>
 </html>
