--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>My Projects</h1>
-      <div class="project-card">
-        <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/recipes">Recipes</a></h2>
-        <p>Description</p>
-      </div>
-      <div class="project-card">
-        <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
-        <p>Description</p>
+      <h1 class="title">My Projects</h1>
+      <div class="project-container">
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/recipes">Recipes</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
+        </div>
       </div>
     </div>
   </body>
