Add all current finished projects to the homepage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
         <div class="project-card">
           <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
         </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/rock-paper-scissors">Rock Paper Scissors</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/etch-a-sketch">Etch-a-Sketch</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/calculator">Calculator</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/signup-form">Sign-up Form</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/admin-dashboard">Admin Dashboard</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/library">Library</a></h2>
+        </div>
+        <div class="project-card">
+          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/tic-tac-toe">Tic Tac Toe</a></h2>
+        </div>
       </div>
     </div>
   </body>
