Reorganize projects by paths

--- a/index.html
+++ b/index.html
@@ -9,33 +9,55 @@
   <body>
     <div class="container">
       <h1 class="title">My Projects</h1>
-      <div class="project-container">
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/recipes">Recipes</a></h2>
+
+      <div class="category">
+        <h2 class="category-title">
+          <a href="https://www.theodinproject.com/paths/foundations/courses/foundations">Foundations</a>
+        </h2>
+        <div class="project-container">
+          <div class="project-card">
+            <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/recipes">Recipes</a></h2>
+          </div>
+          <div class="project-card">
+            <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
+          </div>
+          <div class="project-card">
+            <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/rock-paper-scissors">Rock Paper Scissors</a></h2>
+          </div>
+          <div class="project-card">
+            <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/etch-a-sketch">Etch-a-Sketch</a></h2>
+          </div>
+          <div class="project-card">
+            <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/calculator">Calculator</a></h2>
+          </div>
         </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/landing-page">Landing Page</a></h2>
+      </div>
+
+      <div class="category">
+        <h2 class="category-title"><a href="https://www.theodinproject.com/paths/full-stack-javascript">Full Stack JavaScript</a></h2>
+
+        <div class="subcategory">
+          <h3 class="subcategory-title"><a href="https://www.theodinproject.com/paths/full-stack-javascript/courses/intermediate-html-and-css">Intermediate HTML and CSS</a></h3>
+          <div class="project-container">
+            <div class="project-card">
+              <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/signup-form">Sign-up Form</a></h2>
+            </div>
+            <div class="project-card">
+              <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/admin-dashboard">Admin Dashboard</a></h2>
+            </div>
+          </div>
         </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/rock-paper-scissors">Rock Paper Scissors</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/etch-a-sketch">Etch-a-Sketch</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/foundations/calculator">Calculator</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/signup-form">Sign-up Form</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/intermediate-html-and-css/admin-dashboard">Admin Dashboard</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/library">Library</a></h2>
-        </div>
-        <div class="project-card">
-          <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/tic-tac-toe">Tic Tac Toe</a></h2>
+
+        <div class="subcategory">
+          <h3 class="subcategory-title"><a href="https://www.theodinproject.com/paths/full-stack-javascript/courses/javascript">JavaScript</a></h3>
+          <div class="project-container">
+            <div class="project-card">
+              <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/library">Library</a></h2>
+            </div>
+            <div class="project-card">
+              <h2><a href="https://phnthnhnm.github.io/theodinproject/full-stack-javascript/javascript/tic-tac-toe">Tic Tac Toe</a></h2>
+            </div>
+          </div>
         </div>
       </div>
     </div>
