--- a/full-stack-javascript/javascript/tic-tac-toe/index.html
+++ b/full-stack-javascript/javascript/tic-tac-toe/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="board" class="board"></div>
+  </body>
 </html>
