--- a/full-stack-javascript/javascript/tic-tac-toe/index.html
+++ b/full-stack-javascript/javascript/tic-tac-toe/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div>
+      <input type="text" id="player1" placeholder="Player 1 Name" />
+      <input type="text" id="player2" placeholder="Player 2 Name" />
+      <button id="startGame">Start Game</button>
+    </div>
     <div id="board" class="board"></div>
+    <div id="result" class="result"></div>
   </body>
 </html>
