Add reset game button

--- a/full-stack-javascript/javascript/tic-tac-toe/index.html
+++ b/full-stack-javascript/javascript/tic-tac-toe/index.html
@@ -9,11 +9,14 @@
   </head>
   <body>
     <div>
-      <input type="text" id="player1" placeholder="Player 1 Name" />
-      <input type="text" id="player2" placeholder="Player 2 Name" />
       <button id="startGame">Start Game</button>
     </div>
+    <div>
+      <input type="text" id="player1" placeholder="Player 1 Name" />
+      <input type="text" id="player2" placeholder="Player 2 Name" />
+    </div>
     <div id="board" class="board"></div>
+    <button id="resetGame">Reset Game</button>
     <div id="result" class="result"></div>
   </body>
 </html>
